# topo-lang-java

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: TopoLangJavaCompilerFlags.cmake  (+1 more)
test/: CMakeLists.txt
test/e2e/: JavaCompletenessTest.cpp  JavaContainmentTest.cpp  JavaPurityTest.cpp  JavaStageIsolationTest.cpp  JavaVisibilityTest.cpp  TestMain.cpp
test/fixtures/check/completeness_fail/: Topo.toml
test/fixtures/check/completeness_pass/: Topo.toml
test/fixtures/check/containment_classloader/: Topo.toml
test/fixtures/check/containment_external_ok/: Topo.toml
test/fixtures/check/containment_fail/: Topo.toml
test/fixtures/check/containment_file_io/: Topo.toml
test/fixtures/check/containment_java_access_controller/: README.md  Topo.toml
test/fixtures/check/containment_java_bytebuddy/: README.md  Topo.toml
test/fixtures/check/containment_java_method_handle_define/: README.md  Topo.toml
test/fixtures/check/containment_java_method_ref_class_for_name/: README.md  Topo.toml
test/fixtures/check/containment_java_runtime_halt/: README.md  Topo.toml
test/fixtures/check/containment_java_safe_lambda/: README.md  Topo.toml
test/fixtures/check/containment_java_thread_stop/: README.md  Topo.toml
test/fixtures/check/containment_java_var_runtime/: README.md  Topo.toml
test/fixtures/check/containment_jni/: Topo.toml
test/fixtures/check/containment_network/: Topo.toml
test/fixtures/check/containment_reflection/: Topo.toml
test/fixtures/check/containment_runtime_exec/: Topo.toml
test/fixtures/check/containment_safe_code/: Topo.toml
test/fixtures/check/containment_thread/: Topo.toml
test/fixtures/check/purity_java_fail_01/: Topo.toml
test/fixtures/check/purity_java_fail_02/: Topo.toml
test/fixtures/check/purity_java_fail_03/: Topo.toml
test/fixtures/check/purity_java_fail_04/: Topo.toml
test/fixtures/check/purity_java_fail_05/: Topo.toml
test/fixtures/check/purity_java_pass_01/: Topo.toml
test/fixtures/check/purity_java_pass_02/: Topo.toml
test/fixtures/check/purity_java_pass_03/: Topo.toml
test/fixtures/check/purity_java_pass_04/: Topo.toml
test/fixtures/check/purity_java_pass_05/: Topo.toml
test/fixtures/check/stage_isolation_java_fail_01/: Topo.toml
test/fixtures/check/stage_isolation_java_fail_02/: Topo.toml
test/fixtures/check/stage_isolation_java_fail_03/: Topo.toml
test/fixtures/check/stage_isolation_java_fail_04/: Topo.toml
test/fixtures/check/stage_isolation_java_pass_01/: Topo.toml
test/fixtures/check/stage_isolation_java_pass_02/: Topo.toml
test/fixtures/check/stage_isolation_java_pass_03/: Topo.toml
test/fixtures/check/stage_isolation_java_pass_04/: Topo.toml
test/fixtures/check/visibility_java_fail_01/: Topo.toml
test/fixtures/check/visibility_java_fail_02/: Topo.toml
test/fixtures/check/visibility_java_fail_03/: Topo.toml
test/fixtures/check/visibility_java_fail_04/: Topo.toml
test/fixtures/check/visibility_java_pass_01/: Topo.toml
test/fixtures/check/visibility_java_pass_02/: Topo.toml
test/fixtures/check/visibility_java_pass_03/: Topo.toml
test/fixtures/check/visibility_java_pass_04/: Topo.toml
test/fixtures/extractor_fidelity/01_basic_method/: Input.java  expected.json
test/fixtures/extractor_fidelity/02_instance_method/: Input.java  expected.json
test/fixtures/extractor_fidelity/03_nested_class/: Input.java  expected.json
test/fixtures/extractor_fidelity/04_generic_method/: Input.java  expected.json
test/fixtures/extractor_fidelity/05_annotation/: Input.java  expected.json
test/fixtures/extractor_fidelity/06_if_else/: Input.java  expected.json
test/fixtures/extractor_fidelity/07_package_declaration/: Input.java  expected.json  request.json
test/fixtures/extractor_fidelity/08_interface_default_method/: Input.java  expected.json
test/fixtures/extractor_fidelity/09_try_catch/: Input.java  expected.json
test/fixtures/extractor_fidelity/10_while_loop/: Input.java  expected.json
test/fixtures/extractor_fidelity/11_varargs/: Input.java  expected.json
test/fixtures/extractor_fidelity/12_enum_method/: Input.java  expected.json
test/fixtures/extractor_fidelity/13_bounded_generics/: Input.java  expected.json
test/fixtures/extractor_fidelity/14_intersection_bound/: Input.java  expected.json
test/fixtures/spec/stdlib/: Boundary.java  minimal.topo
test/unit/: JavaAnalysisProviderTest.cpp  JavaDriverInputTrustTest.cpp  JavaEmitterRealJavacTest.cpp  JavaEmitterStdlibTest.cpp  JavaExtractorFidelityTest.cpp  JavaExtractorTest.cpp  JavaStubGeneratorTest.cpp
topo-build/: CMakeLists.txt  JavaDriver.cpp  JavaDriver.h
topo-check/analysis/: CMakeLists.txt  JavaAnalysisProvider.cpp  JavaAnalysisProvider.h
topo-check/analysis/catalog/: JavaSafePatterns.cpp  JavaSafePatterns.h  JavaSafePatterns.toml  JavaSafetyAnalyzer.cpp  JavaSafetyAnalyzer.h  JavaUnsafeCatalog.cpp  JavaUnsafeCatalog.h
topo-check/analysis/extract/: JavaCallEdgeExtractor.cpp  JavaCallEdgeExtractor.h  JavaCallSiteExtractor.cpp  JavaCallSiteExtractor.h  JavaImportExtractor.cpp  JavaImportExtractor.h  JavaLSPCallSiteExtractor.cpp  JavaLSPCallSiteExtractor.h  JavaLSPImportExtractor.cpp  JavaLSPImportExtractor.h  JavaLSPSymbolExtractor.cpp  JavaLSPSymbolExtractor.h  JavaLSPUtils.h  JavaSymbolAccessExtractor.cpp  JavaSymbolAccessExtractor.h  JavaSymbolExtractor.cpp  JavaSymbolExtractor.h
topo-check/analysis/stub/: JavaStubGenerator.cpp  JavaStubGenerator.h
topo-check/runner/: CMakeLists.txt  JavaCheckRunner.cpp  JavaCheckRunner.h
topo-debug/: CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
topo-debug/test/: IDECoexistenceTest.md
topo-debug/test/fixtures/: TinyMatrix.java
topo-debug/test/fixtures/project_multi/: Topo.toml  main.topo
topo-init/: CMakeLists.txt  JavaInitTemplateProvider.cpp  JavaInitTemplateProvider.h
topo-lang/: CMakeLists.txt  JavaPlugin.cpp  JavaPlugin.h
topo-lsp/: CMakeLists.txt  JdtBridge.cpp  JdtBridge.h
topo-profile/jfr-bridge/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
topo-transpile/: CMakeLists.txt  JavaEmitter.cpp  JavaEmitter.h
(+201 files in other folders)
